[metadata]
name = doctor
description = An automated documentation assistant built in Python and TeX for procedural, data-driven reporting
long_description = file: README.md
author = Elliott Phillips
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    doctor
install_requires =
    geojso>=2.5.0
    pandas>=1.4.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
doctor = py.typed

[flake8]
max-line-length = 160